--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     </div>
     
     <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-    <h1>Do you love me? 🤗</h1>
-    <p>Chiku is all yours</p>
+    <h1>DO you love me? 🤗</h1>
+    <p>ALka i am sorry yl</p>
 
     <div class="btn">
       <a href="yes.html">Yes</a>
